[build-system]
requires = [
    "build>=1.4.0",
    "setuptools>=80.10.2",
    "twine>=6.2.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "parsons"
version = "6.0.0"
description = "A python library of connectors for the progressive community."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license-files = [ "LICENSE.md" ]
authors = [
    { name = "The Movement Cooperative", email = "info@movementcooperative.org" },
]
maintainers = [
    { name = "Shauna Gordon-McKeon" },
]
keywords = [ "PROGRESSIVE", "API", "ETL" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = [
    "dependencies",
    "optional-dependencies",
]

[project.urls]
homepage = "https://www.parsonsproject.org/"
documentation = "https://move-coop.github.io/parsons/html/stable/index.html"
releasenotes = "https://github.com/move-coop/parsons/releases"
funding = "https://secure.actblue.com/donate/parsonsproject?refcode=parsonswebsite"
issues = "https://github.com/move-coop/parsons/issues"
github = "https://github.com/move-coop/parsons"
repository = "https://github.com/move-coop/parsons.git"

[dependency-groups]
dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "pre-commit"},
    {include-group = "security"},
    {include-group = "test-coverage"},
]
ci = [
    "build>=1.4",
]
docs = [
    "furo~=2025.12.19",
    "myst-parser~=4.0.1",
    "packaging~=26.0",
    "sphinxcontrib-googleanalytics~=0.5",
    "sphinx-lint==1.0.2",
    "sphinx-multiversion~=0.2.4",
    "Sphinx~=7.4.7;python_version<'3.11'",
    "Sphinx~=8.2.3;python_version>='3.11'",
]
lint = [
    "ruff==0.15.10",
]
pre-commit = [
    "pre-commit>=4.5.1,<4.7.0",
]
security = [
    "bandit[sarif]==1.9.4",
]
test-coverage = [
    "coverage~=7.13.3",
    "pytest-cov>=7.0,<7.2",
    {include-group = "test"},
]
test = [
    "pytest~=9.0.3",
    "pytest-datadir~=1.8.0",
    "pytest-mock~=3.15.1",
    "pytest-xdist~=3.8.0",
    "requests-mock~=1.12.1",
    "testfixtures~=8.3.0;python_version<'3.11'",
    "testfixtures>=9.1,<8.4;python_version>='3.11'",
    "dbt-duckdb>=1.8,<1.11",
]

[tool]

[tool.setuptools]
packages = ["parsons"]

[tool.ruff]
include = [
    "**/*.py",
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "**/vendor/*",
]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear (B)
    "E", # pycodestyle errors (E)
    "W", # pycodestyle warnings (W)
    "D", # pydocstyle
    "C4", # flake8-comprehensions (C4)
    "F", # Pyflakes (F)
    "UP", # pyupgrade (UP)
    "I", # isort (I)
    "TID", # flake8-tidy-imports (TID)
    "ICN", # flake8-import-conventions (ICN)
    "Q", # flake8-quotes (Q)
    "TC", # flake8-type-checking (TC)
    "YTT", # flake8-2020 (YTT)
    "SIM", # flake8-simplify (SIM)
    "PTH", # flake8-use-pathlib (PTH)
    "ISC", # flake8-implicit-str-concat (ISC)
    "PT", # flake8-pytest-style (PT)
    "RUF100", # unused-noqa
]
ignore = [
    "E501", # line-too-long
    # pathlib
    "PTH116", # os-stat
    "PTH118", # os-path-join
    "PTH122", # os-path-splitext
    "PTH124", # py-path
    "PTH206", # os-sep-split
    "PTH207", # glob
    "PTH208", # os-listdir
    # pydocstyle
    "D1", # pydocstyle (D) warnings about undocumented module, class, method, etc
    "D202", # blank-line-after-function
    "D205", # missing-blank-line-after-summary
    "D400", # missing-trailing-period
    "D401", # non-imperative-mood
    "D404", # docstring-starts-with-this
    "D406", # missing-new-line-after-section-name
    "D407", # missing-dashed-underline-after-section
    "D408", # missing-section-underline-after-name
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest]
addopts = [
    "-rf",
    "-n=auto",
]
testpaths = [
    "test",
]
filterwarnings = [
    # Warnings triggered by libraries we use (not our own code)
    "ignore:invalid escape sequence:SyntaxWarning", # typically due to using "/" in docstrings that aren't raw strings
    "ignore:invalid escape sequence:DeprecationWarning", # typically due to using "/" in docstrings that aren't raw strings
    "ignore:Use ProtectionLevel enum instead:DeprecationWarning", # braintree causes these as of 2026-04
    "ignore:Use protection_level parameter instead:DeprecationWarning", # braintree causes these as of 2026-04
    "ignore:Please upgrade to the latest Python version:FutureWarning", # google-api-core causes these on older python versions as of 2026-04
]
markers = [
    "live: mark test as requiring authentication and/or network access"
]

[tool.isort]
profile = "hug"
src_paths = [
    "parsons/",
    "test/",
    "useful_resources/",
]

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    "*/vendor/*",
    ]

[tool.coverage.paths]
source = [
    "parsons/",
]
